# Palantino

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
api/: main.py
connectors/: base.py  registry.py
connectors/_template/: connector.py
connectors/autobahn/: connector.py
connectors/baustellen/: connector.py
connectors/brightsky/: connector.py
connectors/dortmund_events/: connector.py
connectors/geo_spine/: connector.py
connectors/gremienniederschriften/: connector.py
connectors/gremientermine/: connector.py
connectors/gtfs_realtime/: connector.py
connectors/gtfs_static/: connector.py
connectors/haushalt/: connector.py
connectors/lanuv_air/: connector.py
connectors/nordstadtblogger/: connector.py
connectors/ods_pois/: connector.py
connectors/ods_stats/: connector.py
connectors/offeneregister/: connector.py
connectors/oparl/: connector.py
connectors/overpass/: connector.py
db/: session.py  temporal.py
docs/: data-sources.md  dortmund_all_data_sources_v3.xlsx  ingestion-and-temporal-design.md  reasoning-and-synergy.md
embeddings/: backfill.py  embedder.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ingestion/: flows.py  writer.py
ontology/: edges.py  nodes.py
reasoning/: actor_extraction.py  llm.py  prompts.py  qa.py  resource_enrich.py  resources.py  scanner.py  synergy_finder.py  tellerrand.py
resolution/: evaluation.py  reference_linker.py  resolver.py  text_linker.py
scripts/: bootstrap.py
tests/: test_embeddings.py
(+74 files in other folders)
