[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civic-graph"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # DB (asyncpg dialect: $1 placeholders, conn.fetch/fetchrow/execute)
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "geoalchemy2>=0.15",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # HTTP
    "httpx>=0.27",
    # Data
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Geo
    "shapely>=2.0",
    "pyproj>=3.6",
    # Transit (GTFS-Realtime protobuf)
    "gtfs-realtime-bindings>=1.0",
    # Orchestration
    "prefect>=3.0",
    # Claude reasoning layer
    "anthropic>=0.30",
    # Utilities
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
